@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.1.1.1 2002/10/28 18:40:22 uebayasi Exp $
+$NetBSD: distinfo,v 1.2 2002/12/31 03:27:57 uebayasi Exp $
 
-SHA1 (navi2ch-1.6.0.tar.gz) = f0dae208167bf59d8537c2bb5eccbe553a488634
-Size (navi2ch-1.6.0.tar.gz) = 333278 bytes
+SHA1 (navi2ch-1.6.1.tar.gz) = bf4573e958fdcd655fd3f060e81533f5c1d1939a
+Size (navi2ch-1.6.1.tar.gz) = 358349 bytes
