@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.951 2002/12/31 02:33:26 uebayasi Exp $
+$NetBSD: CHANGES,v 1.952 2002/12/31 03:28:46 uebayasi Exp $
 
 Changes to the packages collection and infrastructure in 2002:
 
@@ -4321,3 +4321,4 @@ Changes to the packages collection and infrastructure in 2002:
 	Updated gmp3info to 0.8.4 [tron 2002-12-30]
 	Updated snes9x to 1.39nb2 [kristerw 2002-12-30]
 	Updated xpdf to 2.0.1nb2 [uebayasi 2002-12-31]
+	Updated navi2ch to 1.6.1 [uebayasi 2002-12-31]
